releng: add attachment feature
Change-Id: I146e3a136c8a9a99a48594ead67823d92f225c74
Signed-off-by: Thomas Guiu <thomas.guiu@soyatec.com>