@@ -357,7 +357,7 @@ This file was generated by Eclipse EGF
         </echoproperties>
     </target>
 	
-	<target name="all" depends="CleanStep_1,TP_juno,TP_build,releng,common,PublishStep_6,common_feature,BuildStep_8,PublishStep_9,accuracy_feature,resourcereuse,PublishStep_12,PublishStep_13,resourcereuse_feature,BuildStep_15,PublishStep_16,cadence_feature,report,PublishStep_19,PublishStep_20,report_feature,emde,PublishStep_23,PublishStep_24,PublishStep_25,PublishStep_26,emde_feature,patterns,PublishStep_29,patterns_feature,diagrams,PublishStep_32,diagrams_representation_feature,docgen,PublishStep_35,PublishStep_36,docgen_features,BuildStep_38,PublishStep_39,composer_feature,BuildStep_41,PublishStep_42,transposer_feature,ad,PublishStep_45,PublishStep_46,PublishStep_47,ad_feature,ad_dsl,PublishStep_50,PublishStep_51,addsl_feature,detachment,PublishStep_54,PublishStep_55,PublishStep_56,PublishStep_57,common_1_feature,detachment_feature,BuildStep_60,PublishStep_61,PublishStep_62,PublishStep_63,sdk_feature,AntStep_65,kitalpha,EgfStep_67,zip_juno_results" />
+	<target name="all" depends="CleanStep_1,TP_juno,TP_build,releng,common,PublishStep_6,common_feature,BuildStep_8,PublishStep_9,accuracy_feature,resourcereuse,PublishStep_12,PublishStep_13,resourcereuse_feature,BuildStep_15,PublishStep_16,cadence_feature,report,PublishStep_19,PublishStep_20,report_feature,emde,PublishStep_23,PublishStep_24,PublishStep_25,PublishStep_26,emde_feature,patterns,PublishStep_29,patterns_feature,diagrams,PublishStep_32,diagrams_representation_feature,docgen,PublishStep_35,PublishStep_36,docgen_features,BuildStep_38,PublishStep_39,composer_feature,BuildStep_41,PublishStep_42,transposer_feature,ad,PublishStep_45,PublishStep_46,PublishStep_47,ad_feature,ad_dsl,PublishStep_50,PublishStep_51,addsl_feature,detachment,PublishStep_54,PublishStep_55,PublishStep_56,PublishStep_57,PublishStep_58,common_1_feature,detachment_feature,attachment_feature,BuildStep_62,PublishStep_63,PublishStep_64,PublishStep_65,sdk_feature,AntStep_67,kitalpha,EgfStep_69,zip_juno_results" />
 	<target name="TP_juno" depends="TP_juno_TP_juno,TP_juno_install_cots_features,TP_juno_install_diffmerge,TP_juno_install_ecoretools2" />
 	<target name="TP_build" depends="TP_build_TP_build,TP_build_install_egf_TP_build" />
 	<target name="releng" depends="releng_BuildStep_1,releng_PublishStep_2,releng_build_feature" />
@@ -919,7 +919,7 @@ This file was generated by Eclipse EGF
 		</buckminster>
     </target>
 
-    <target name="BuildStep_60" depends="init,install.buckminster">
+    <target name="BuildStep_62" depends="init,install.buckminster">
         <echo message="Importing projects into workspace ${workspace} and binaries into target platform" />
 
 		<echo message="install JRE ${env.JAVA_HOME}" />
@@ -935,14 +935,14 @@ This file was generated by Eclipse EGF
         <buckminster command="importtargetdefinition">
             <cmdargs>
                 <arg value="--active" />
-                <arg value="${relengDir}/buckminster_BuildStep_60/build.target" />
+                <arg value="${relengDir}/buckminster_BuildStep_62/build.target" />
             </cmdargs>
         </buckminster>
 		<echo message="provision : import projects in workspace" />
         <buckminster command="import">
             <!-- Uncomment to debug <globargs><jvmarg value="-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=y"/></globargs> -->
             <cmdargs>
-                <arg value="${relengDir}/buckminster_BuildStep_60/build.mspec" />
+                <arg value="${relengDir}/buckminster_BuildStep_62/build.mspec" />
             </cmdargs>
         </buckminster>
 
@@ -1739,7 +1739,36 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_61" depends="init,install.buckminster" >
+	<target name="PublishStep_58" depends="init,install.buckminster" >
+
+		
+		<echo message="Generate Site"/>
+		<buckminster command="perform">
+			<globargs>
+				<arg value="-Dsite.include.top=true"/>
+				<arg value="-Dsite.signing=false"/>				
+				<arg value="-Dcbi.include.source=true"/>				
+			</globargs>
+			<cmdargs>
+				<arg value="org.polarsys.kitalpha.model.attachment.feature:eclipse.feature#site.p2" />
+			</cmdargs>
+		</buckminster>
+
+		<echo message="Publish site"/>
+		<mkdir dir="${publish}/org.polarsys.kitalpha.model.attachment.feature/site.p2/"/>
+		<copy todir="${publish}/org.polarsys.kitalpha.model.attachment.feature/site.p2/">
+			<fileset dir="${result}/output">
+				<include name="org.polarsys.kitalpha.model.attachment.feature*/site.p2/*"/>
+				<include name="org.polarsys.kitalpha.model.attachment.feature*/site.p2/**"/>
+			</fileset>
+			<filtermapper>
+				<replaceregex pattern=".*site\.p2" replace="" />
+			</filtermapper>
+		</copy>
+		
+	</target>
+
+	<target name="PublishStep_63" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -1768,7 +1797,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_62" depends="init,install.buckminster" >
+	<target name="PublishStep_64" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -1797,7 +1826,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_63" depends="init,install.buckminster" >
+	<target name="PublishStep_65" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -1827,7 +1856,7 @@ This file was generated by Eclipse EGF
 	</target>
 
 
-	<target name="AntStep_65">
+	<target name="AntStep_67">
 		<antcall target="move_egf_to_tools2"/>
 	</target>
 
@@ -1836,7 +1865,7 @@ This file was generated by Eclipse EGF
 	<move file="${publish}/TP_build" tofile="${tools}/egf" />
 </target>
 
-	<target name="EgfStep_67" depends="init,install.egf">
+	<target name="EgfStep_69" depends="init,install.egf">
 		<egf>
             <globargs>
 				<jvmarg value="-DplatformPath=${publish}/TP_juno" />
@@ -1893,6 +1922,7 @@ This file was generated by Eclipse EGF
 				<repository location="file:/${publish}/org.polarsys.kitalpha.model.common.scrutiny.feature/site.p2" />
 				<repository location="file:/${publish}/org.polarsys.kitalpha.model.common.share.feature/site.p2" />
 				<repository location="file:/${publish}/org.polarsys.kitalpha.patterns.feature/site.p2" />
+				<repository location="file:/${publish}/org.polarsys.kitalpha.model.attachment.feature/site.p2" />
 			</source>
 		</p2.mirror>
 	</target>
@@ -2738,6 +2768,38 @@ This file was generated by Eclipse EGF
                 <arg value="org.polarsys.kitalpha.model.detachment.feature.feature.group" />
                 <arg value="-i" />
                 <arg value="org.polarsys.kitalpha.model.detachment.source.feature.feature.group" />
+
+            </args>
+        </eclipse.launch>
+	</target>	
+	<target name="attachment_feature" depends="init,install.director" >
+        <eclipse.launch app="director">
+            <args>
+                <jvmarg value="-Declipse.p2.mirrors=false" />
+                    <jvmarg value="-Xmx1024m"/>
+                    <jvmarg value="-XX:MaxPermSize=256m"/>
+
+
+            	<arg value="-roaming" />
+            	<arg value="-profileProperties" />
+                <arg value="org.eclipse.update.install.features=true " />
+
+                <arg value="-d" />
+                <arg value="${publish}/TP_juno" />
+                
+                <arg value="-p" />
+                <arg value="SDKProfile" />
+
+
+                <arg value="-r" />
+                <arg value="file:/${publish}/org.polarsys.kitalpha.model.attachment.feature/site.p2" />
+                
+
+
+                <arg value="-i" />
+                <arg value="org.polarsys.kitalpha.model.attachment.feature.feature.group" />
+                <arg value="-i" />
+                <arg value="org.polarsys.kitalpha.model.attachment.source.feature.feature.group" />
 
             </args>
         </eclipse.launch>
